sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:9: error: ')' expected but ';' found.
      echange(i;i+1);
               ^AlgGnomeSort:9: error: ';' expected but ')' found.
      echange(i;i+1);
                   ^